--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-$color-subtle: #ccc;
+$color-subtle: #eee;
 
 $paper-width-print: 210mm;
 $paper-height-print: 297mm;
@@ -8,12 +8,15 @@ $paper-width-display: (210*3)px;
 $paper-height-display: (297*3)px;
 $paper-margin-display: (10*3)px;
 
-$size-meals-height: 25mm;
-$size-meals-margin: 2mm;
+$size-margin: 2mm;
+$size-meals-height: 20mm;
 $size-footer-height: 10mm;
+$size-wrapper-top-right-width: 25mm;
+$size-wrapper-top-left-top-height: 50mm;
 
 /* Print */
 @media print {
+  * #meals {$color-subtle: $color-subtle !important;}
   .no-print {display: none;}
   @page {
     size: A4 portrait;
@@ -42,65 +45,104 @@ section#print {
 .paper {
   box-sizing: border-box; padding: $paper-margin-print;
   margin: 0 auto; /* align center */
-  width: 210mm; height: 297mm;
+  width: $paper-width-print; height: $paper-height-print;
   .wrapper {
-//    outline: 1px dotted gray;
-    position: relative;
-    width: 100%; height: 100%;
-    section#tasks {
-      height: $paper-height-print - 2*$paper-margin-print - $size-meals-height - $size-meals-margin - $size-footer-height;
-      .hours {
-        position: absolute; right: 0; top: 7mm;
-        margin: 0; padding: 0;
-        width: 5mm;
-        list-style: none;
-        li {
-          position: relative;
-          height: 14mm;
-          border-top: 1px solid gray;
-          span {
-            position: absolute;
-            left: -6mm; top: -2.5mm;
-          }
-        }
-      }
+    position: relative; width: 100%; height: 100%;
+    div#wrapper-top {
+      height: $paper-height-print - 2*$paper-margin-print - $size-meals-height - 2*$size-margin - $size-footer-height;
+       #wrapper-top-right {
+         float: right;
+         width: $size-wrapper-top-right-width;
+       }
+       #wrapper-top-left {
+         margin-right: $size-wrapper-top-right-width + $size-margin;
+         position: relative; height: 100%;
+         #wrapper-top-left-top {
+           height: $size-wrapper-top-left-top-height;
+           
+         }
+         #wrapper-top-left-bottom { 
+           position: absolute; left: 0; right: 0; bottom: 0; 
+         }
+       } 
     }
-    .bottom {
+    
+    #wrapper-bottom {
       position: absolute; left: 0; right: 0; bottom: 0; 
-      section#meals {
-        margin-bottom: $size-meals-margin;
-        table {
-          width: 100%; height: $size-meals-height;
-          table-layout: fixed; /* Same widths of cells */
-          td {
-            padding: 5px;
-            text-align: center;
-            border: 1px solid $color-subtle; color: $color-subtle;
-          }
-        }
-      }
-      footer {
-        height: $size-footer-height;
-        section#info {
-          float: right; 
-          width: 40mm; margin-left: 10mm; height: 100%;
-          text-align: right; font-size: 4mm;
-          p {line-height: 5mm; margin: 0;}
-          .day {font-weight: bold;}
-        }
+      div#wrapper-bottom-top {
         
-        section#areas {
-          ul {
-            margin: 0; padding: 0;
-            li {
-              float: left; margin-right: 1mm;
-              display: inline-block; padding: 6px 10px; 
-              font-weight: normal; text-align: center; vertical-align: middle; white-space: nowrap;
-              border: 1px solid $color-subtle; border-radius: 4px;
-            }
-          } 
-        }
+      }
+      div#wrapper-bottom-bottom {
+        height: $size-footer-height;
       }
     }
   }
+}
+    
+    
+    
+/* Sections */
+section#tasks {
+  .hours {
+    margin: 0; padding: 0; list-style: none;
+    width: 10mm;
+    li {
+      height: 14mm;
+      border-top: 1px solid gray;
+      text-align: center;
+      span {
+        position: relative; top: -2.7mm;
+        padding: 0 1mm; background: white !important;
+      }
+    }
+  }
+}
+
+section#meals {
+  margin-bottom: $size-margin;
+  table {
+    width: 100%; height: $size-meals-height;
+    table-layout: fixed; /* Same widths of cells */
+    td {
+      padding: 5px;
+      text-align: center;
+      border: 1px solid $color-subtle; color: $color-subtle;
+    }
+  }
+}
+
+section#areas {
+  ul {
+    margin: 0; padding: 0;
+    li {
+      color: $color-subtle;
+      float: left; width: 50%; height: 50mm; line-height: 50mm; display: inline-block;
+      font-weight: normal; text-align: center; vertical-align: middle; white-space: nowrap;
+      border: 1px solid $color-subtle;
+    }
+    li:nth-child(even){
+      border-left: 0 !important;
+    } 
+  } 
+}
+
+
+section#routines {
+  ul {
+    margin: 0; padding: 0;
+    li {
+      float: left; margin-right: 1mm;
+      display: inline-block; padding: 6px 10px; 
+      font-weight: normal; text-align: center; vertical-align: middle; white-space: nowrap;
+      border: 1px solid $color-subtle; border-radius: 4px;
+    }
+  } 
+}
+
+section#info {
+  float: right; 
+  width: 40mm; margin-left: 10mm; height: 100%;
+  text-align: right; font-size: 4mm;
+  p {line-height: 5mm; margin: 0;}
+  .day {font-weight: bold;}
 }
