Shorter routines to fit

--- a/index.slim
+++ b/index.slim
@@ -11,7 +11,7 @@ html(ng-app="app")
       
       function PlannerCtrl($scope) {
         $scope.areas = ["People", "Health", "Interests", "Organize", "Create", "Work"];
-        $scope.routines = ["6AM wakeup", "Dreams", "Review", "Love", "Photo", "Guitar", "Cook", "Floss"];
+        $scope.routines = ["6AM", "Dreams", "Review", "Love", "Guitar", "Cook", "Floss"];
         $scope.meals = ['breakfast', 'AM snack', 'lunch', 'PM snack', 'dinner', 'night snack'];
         $scope.date = moment();
 
