--- a/index.slim
+++ b/index.slim
@@ -1,4 +1,5 @@
-- hours = ['06', '07', '08', '09', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22']
+- hours = ['06', '07', '08', '09', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23', '24']
+
 doctype html
 html(ng-app="app")
   head
