--- a/style.css
+++ b/style.css
@@ -89,23 +89,25 @@ section#meals {
       border: 1px solid #eeeeee !important;
       color: #eeeeee !important; }
 
-section#areas ul {
-  margin: 0;
-  padding: 0; }
-  section#areas ul li {
-    color: #eeeeee !important;
-    float: left;
-    width: 50%;
-    height: 50mm;
-    line-height: 50mm;
-    display: inline-block;
-    font-weight: normal;
-    text-align: center;
-    vertical-align: middle;
-    white-space: nowrap;
-    border: 1px solid #eeeeee !important; }
-  section#areas ul li:nth-child(even) {
-    border-left: 0 !important; }
+section#areas {
+  display: none; }
+  section#areas ul {
+    margin: 0;
+    padding: 0; }
+    section#areas ul li {
+      color: #eeeeee !important;
+      float: left;
+      width: 50%;
+      height: 50mm;
+      line-height: 50mm;
+      display: inline-block;
+      font-weight: normal;
+      text-align: center;
+      vertical-align: middle;
+      white-space: nowrap;
+      border: 1px solid #eeeeee !important; }
+    section#areas ul li:nth-child(even) {
+      border-left: 0 !important; }
 
 section#routines ul {
   margin: 0;
